--- a/section-07-ci-and-publishing/model-package/tox.ini
+++ b/section-07-ci-and-publishing/model-package/tox.ini
@@ -21,6 +21,9 @@ passenv =
 	KAGGLE_USERNAME
 	KAGGLE_KEY
 	GEMFURY_PUSH_URL
+	; kaorichonnam#KAGGLE_USERNAME
+	; be035405b43891635c529764691a9175#KAGGLE_KEY
+	; https://TkVgPKDiEZC3uFLjWEHF:@pypi.fury.io/Ka0Ri/#GEMFURY_PUSH_URL
 
 [testenv:test_package]
 allowlist_externals = python
