--- a/section-07-ci-and-publishing/model-package/tox.ini
+++ b/section-07-ci-and-publishing/model-package/tox.ini
@@ -63,9 +63,9 @@ setenv =
 
 commands=
 	# fetch
-	; kaggle competitions download -c house-prices-advanced-regression-techniques -p ./regression_model/datasets
+	kaggle competitions download -c house-prices-advanced-regression-techniques -p ./regression_model/datasets
 	# unzip
-	; unzip ./regression_model/datasets/house-prices-advanced-regression-techniques.zip -d ./regression_model/datasets
+	unzip ./regression_model/datasets/house-prices-advanced-regression-techniques.zip -d ./regression_model/datasets
 
 
 [testenv:publish_model]
