--- a/section-07-ci-and-publishing/model-package/tox.ini
+++ b/section-07-ci-and-publishing/model-package/tox.ini
@@ -56,7 +56,7 @@ commands=
 envdir = {toxworkdir}/test_package
 allowlist_externals = unzip
 deps =
-	kaggle<1.6.0
+	kaggle
 
 setenv =
 	{[testenv:test_package]setenv}
